--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,1 +1,11 @@
+name: first-workflow
+on: workflow_dispatch
+jobs:
+  first-job:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Print Greeting
+        run: echo "Hello"
+      - name: Print goodbye
+        run: echo "bye done!"   
 
