--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,4 +7,4 @@ jobs:
       - name: Get code
         uses: actions/checkout@v4
       - name: check Nodejs version
-        run: npm v
+        run: npm version
