apansuria adding basicdemo.yml workflow

--- a/.github/workflows/basic-demo.yml
+++ b/.github/workflows/basic-demo.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: checkout the code
-          uses: actions/checkou@v3
+          uses: actions/checkout@v3
 
         - name: Run single command using the runner shell
           run: echo "Hello,This is a basic demo of github actions.!"
