--- a/.github/workflows/list-default-vars.yml
+++ b/.github/workflows/list-default-vars.yml
@@ -6,3 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - run: env
+  print-enviroment-variables:
+    runs-on: ubuntu-latest
+    steps:
+      - name: print value of vars
+        run: |
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          echo "GITHUB_JOB: $GITHUB_JOB"
+
+
+    
