apansuria updating new workflow

--- a/.github/workflows/list-default-vars.yml
+++ b/.github/workflows/list-default-vars.yml
@@ -16,5 +16,5 @@ jobs:
 
       - name: print value of secrets
         run: |
-            echo "MY_TOKEN = ${{secrets}}"
+            echo "MY_TOKEN = ${{secrets.MY_TOKEN}}"
         
